@@ -1,6 +1,11 @@
 1.1.3 - 201302xx
 ================
 
+Broker:
+- mosquitto_passwd utility now uses tmpfile() to generate its temporary data
+  storage file. It also creates a backup file that can be used to recover data
+  if an errors occur.
+
 Other:
 - Build script fixes to help packaging on Debian.
 
